﻿[B]1.1.6 (2016.8.26)[/B]
added: Support https, custom path and authentication using MD5 Digest Authentication. thanks petslane

[B]1.1.5 (2015.10.8)[/B]
changed: hide password in settings

[B]1.1.4 (2015.7.20)[/B]
changed: show torrents sorted by name
added requires of simplejson
fixed: bug in settings.xml

[B]1.1.3 (2014.11.2)[/B]
compatible utorrent 2.2.1 which don't support stream

[B]1.1.2 (2014.7.23)[/B]
change python version to 2.1.0 for gotham

[B]1.1.1 (2012.12.9)[/B]
added stream capability, thanks burlizzi
added color tags
changed: use simplejson to get data

[B]1.1.0 (2012.1.21)[/B]
initialized into eden

[B]1.0.5 (2011.1.30)[/B]
changed: icon

[B]1.0.4 (2011.1.22)[/B]
changed: handle fail to connect to daemon error

[B]1.0.3 (2011.1.16)[/B]
fixed: split torrent items wrong when commas in the torrent name

[B]1.0.2 (2011.1.15)[/B]
chaged: use xbmc.log() to log debug message

[B]1.0.1 (2011.1.8)[/B]
fixed: rssfeeds cause error in updateList()

[B]1.0.0 (2011.1.3)[/B]
Initial import into addons repository