@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.program.utorrent"
        name="uTorrent"
-       version="1.1.6"
+       version="1.1.7"
        provider-name="Taxigps">
     <requires>
         <import addon="xbmc.python" version="2.1.0"/>
